# pygments-vsc-darkmodern

./: README.md  pyproject.toml  test.py
dark_modern/: __init__.py
