[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygments-vsc-darkmodern" # change this to a package name for your plugin
version = "0.0.1"
dependencies = ["pygments"]
readme = "README.md"


# Declare plugin styles in this table. The key *is* significant: it is the name
# the style will be recognized as. In this example, we can use
#
#   pygmentize -Ostyle=dark-modern"
#
# on the command line. Also,
#
#   pygments.styles.get_style_by_name("dark-modern")
#
# will return the style class.

[project.entry-points."pygments.styles"]
dark-modern = "dark_modern:DarkModern"

[tool.hatch.build.targets.wheel]
packages = ["dark_modern"]

[tool.hatch.envs.default.scripts]
test = "pygmentize -O style=dark-modern test.py"
